mise en forme forecast

--- a/src/app/meteo/forecast/forecast.component.html
+++ b/src/app/meteo/forecast/forecast.component.html
@@ -1,9 +1,7 @@
-<p>forecast works!</p>
-
-<div>
-    <div>{{forecast.day_long}}</div>
-    <div>{{forecast.tmin}}</div>
-    <div>{{forecast.tmax}}</div>
+<div id="forecast">
+    <div>{{forecast.day_long}} {{forecast.date}} </div>
+    <div>T min {{forecast.tmin}}°C</div>
+    <div>T max {{forecast.tmax}}°C</div>
     <div>{{forecast.condition}}</div>
     <img src="{{forecast.icon}}" alt="">
 </div>
