--- a/src/app/meteo/meteo-detail/meteo-detail.component.css
+++ b/src/app/meteo/meteo-detail/meteo-detail.component.css
@@ -10,3 +10,10 @@
 #meteo:hover{
     box-shadow: 5px 5px 5px black;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
