changement de structure et test nom de villle plus mise en place routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
-<!-- <app-header></app-header> -->
 
-<app-meteo></app-meteo>
+<div>
+    <app-header></app-header>
+</div>
+
+
+<!-- <app-meteo></app-meteo> -->
 
 <!-- <app-starwar></app-starwar> -->
+
+
+<div>
+    <router-outlet></router-outlet>
+</div>
+
