--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+
+<!-- <a routerLink="/meteo" routerLinkActive = "selectedMenu" >Meteo</a>
+
+<a routerLink="/starwar" routerLinkActive = "selectedMenu"  >Starwar</a> -->
+
+<input type="button" routerLink="/meteo" routerLinkActive = "selectedMenu"  value="Meteo">
+<input type="button" routerLink="/starwar" routerLinkActive = "selectedMenu"  value="Starwar">
+
+<!-- <input type="button" (click)="go()"> -->
