ajout suppression meteo et  divers css

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@ input{
     border-radius: 0.5em;
 }
 input:hover{
-    /* box-shadow: 5px,5px,5px,black; */
+    box-shadow: 5px 5px 5px black;
     background-color: coral;
 }
 
