--- a/src/app/meteo/meteo-detail/meteo-detail.component.html
+++ b/src/app/meteo/meteo-detail/meteo-detail.component.html
@@ -1,16 +1,18 @@
 
 
-<div id="meteo" (click)="detailMeteo(villeDemandee)">
+<div id="meteo" (click)="detailMeteo(donnee)">
     <!-- <div id="ville">{{ville}}</div>
     <div id="temperature">{{temperature}}°C</div>
     <div id="condition">{{condition}}% d'humidité</div>
     <img src="{{icon}}" alt=""> -->
-    <div id="ville">{{reponse.city_info.name}}</div>
-    <div id="temperature">{{reponse.current_condition.tmp}}°C</div>
-    <div id="condition">{{reponse.current_condition.humidity}}% d'humidité</div>
-    <img src="{{reponse.current_condition.icon}}" alt="">
+    <div id="ville">{{donnee.city_info.name}}</div>
+    <div id="temperature">{{donnee.current_condition.tmp}}°C</div>
+    <div id="condition">{{donnee.current_condition.humidity}}% d'humidité</div>
+    <img src="{{donnee.current_condition.icon}}" alt="">
 
     <div *ngIf="toggle" class="wrapper">
         <app-forecast *ngFor="let forecast of forecasts" [forecast]="forecast" ></app-forecast>
     </div>
+
+    <!-- <input type="button" value="Supprimer" (click)="supprimer()"> -->
 </div>
