--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div id="header">
     <app-header></app-header>
 </div>
 
@@ -9,7 +9,7 @@
 <!-- <app-starwar></app-starwar> -->
 
 
-<div>
+<div id="content">
     <router-outlet></router-outlet>
 </div>
 
