modif pour routing

--- a/src/app/meteo/meteo-detail/meteo-detail.component.html
+++ b/src/app/meteo/meteo-detail/meteo-detail.component.html
@@ -14,5 +14,5 @@
         <app-forecast *ngFor="let forecast of forecasts" [forecast]="forecast" ></app-forecast>
     </div>
 
-    <!-- <input type="button" value="Supprimer" (click)="supprimer()"> -->
+    <input type="button" value="Supprimer" (click)="supprimer()">
 </div>
