--- a/src/app/starwar/people/people.component.html
+++ b/src/app/starwar/people/people.component.html
@@ -6,6 +6,7 @@
     <input  *ngIf="number>0" type="button" value="-"  (click)="setNumber(-1)">
 
     <app-people-detail [number]="number"></app-people-detail>
+    <!-- <app-people-detail ></app-people-detail> -->
 
     <input  type="button" value="+"  (click)="setNumber(1)">
     
