--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,3 +5,7 @@
     <input type="password" placeholder="password" #pwd>
     <input type="button" value="Login" (click)="isLoged(login.value,pwd.value)">
 </div>
+
+<div>
+    <input type="button" value="S'inscrire" (click)="go()">
+</div>
