--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -16,3 +16,11 @@ input:hover{
 
 
 }
+div{
+    display: inline-block;    padding: 1em;
+    margin: 0.5em;
+    background-color: antiquewhite;
+    border: 1px solid black;
+    border-radius: 0.5em;
+    float: right;
+}
