--- a/src/app/formulaire3/formulaire3.component.html
+++ b/src/app/formulaire3/formulaire3.component.html
@@ -1,27 +1,50 @@
 
-<h1>Merci de vous inscrire</h1>
+<div>
+    <h1>Merci de vous inscrire</h1>
+</div>
+
 
 <form (ngSubmit)="register()" [formGroup]="userForm">
 
     <div>
         <label> Username</label>
+    </div>
+    <div>
         <input type="text" formControlName="username">
+    </div>
+    <div>
         <div style="color: red;" *ngIf="userForm.get('username')?.dirty  &&  userForm.get('username')?.hasError('required')"   > champ obligatoire</div>
+    </div>
+    <div>
         <div style="color: red;" *ngIf="userForm.get('username')?.touched  &&  userForm.get('username')?.hasError('minlength')"   > saisie invalide (minimum trois caractères)</div>
     </div>
     <div>
         <label> Password</label>
+    </div>
+    <div>
         <input type="password" formControlName="password">
+        </div>
+    <div>
         <div style="color: red;" *ngIf="userForm.get('password')?.dirty  &&  userForm.get('password')?.hasError('required')"   > saisie invalide (minimum cinq caractères)</div>
+    </div>
+    <div>
         <div style="color: red;" *ngIf="userForm.get('password')?.touched  &&  userForm.get('password')?.hasError('minlength')"   > saisie invalide (minimum cinq caractères)</div>
     </div>
     <div>
         <label> Password confirmation</label>
-        <input type="password" formControlName="passwordConf">
-        <div style="color: red;" *ngIf="userForm.invalid  &&  userForm.get('password')?.valid"   > les mots de passe ne correspondent pas </div>
     </div>
-
-    <input type="submit" value="Envoyer" [disabled]="userForm.invalid">
-    <input type="button" value="Reset" (click)="reset()">
-
+    <div>
+        <input type="password" formControlName="passwordConf">
+        </div>
+    <div>
+        <div style="color: red;" *ngIf="userForm.invalid  &&  userForm.get('password')?.valid  &&  userForm.get('username')?.valid"   > les mots de passe ne correspondent pas </div>
+    </div>
+    <div>
+        <input type="submit" value="Envoyer" [disabled]="userForm.invalid">
+    </div>
+    <div>
+        <input type="button" value="Reset" (click)="reset()">
+    </div>
+   
+    
 </form>
